# internal/http/handler/webui/swagger/openapi.yml
@@ -70,6 +70,34 @@ paths:
           description: Request invalid or malformed
         "500":
           description: An unknown error occured
+  /ask:
+    get:
+      summary: Ask documents
+      operationId: ask
+      parameters:
+        - in: query
+          name: query
+          schema:
+            type: string
+          description: The question to ask to documents
+          required: true
+        - in: query
+          name: collection
+          schema:
+            type: array
+            item:
+              type: string
+            allowEmptyValue: true
+          description: Restrict the search to these collections
+      responses:
+        "200":
+          description: Successful operation
+        "204":
+          description: No result was found in documents
+        "400":
+          description: Request invalid or malformed
+        "500":
+          description: An unknown error occured
   /tasks:
     get:
       summary: List current tasks
